--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       </div>
 
       <form id="miFormulario">
-          <input class="botons" type="submit" value="Generar CURP">
+          <input class="botons" type="submit" value="Siguiente">
       </form>
   </section>
 
