--- a/pagina3.html
+++ b/pagina3.html
@@ -6,6 +6,30 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="style.css">
   <title>Formulario Transformado</title>
+  <style>
+      /* Estilos para la animación de carga */
+      #cargando {
+          display: none;
+          text-align: center;
+          font-size: 18px;
+          color: #333;
+          margin-top: 20px;
+      }
+      .loading {
+          display: inline-block;
+          width: 50px;
+          height: 50px;
+          border: 5px solid #f3f3f3;
+          border-top: 5px solid #3498db;
+          border-radius: 50%;
+          animation: spin 1s linear infinite;
+      }
+
+      @keyframes spin {
+          0% { transform: rotate(0deg); }
+          100% { transform: rotate(360deg); }
+      }
+  </style>
 </head>
 <body>
   <!-- Franjas fuera del formulario -->
@@ -64,16 +88,41 @@
       </select>
     </div>
 
-      <form id="miFormulario" action="#">
+      <!-- Botones "Siguiente" y "Regresar" -->
+      <form id="carga5" action="#">
           <input class="botons" type="submit" value="Siguiente">
       </form>
-      <form id="miFormulario" action="pagina2.html">
-        <input class="botons" type="submit" value="Regresar">
-    </form>
+      <form id="carga6" action="pagina2.html">
+          <input class="botons" type="submit" value="Regresar">
+      </form>
+
+      <!-- Animación de carga -->
+      <div id="cargando">
+          <div class="loading"></div>
+          <p> Cargando...</p>
+      </div>
   </section>
 
   <script>
-      
+      // Función para mostrar la animación de carga y redirigir
+      function cargarPagina(event, url) {
+          event.preventDefault(); // Prevenir el comportamiento predeterminado del formulario
+          // Mostrar la animación
+          document.getElementById("cargando").style.display = "block";
+          // Simular un retraso de 2 segundos antes de redirigir
+          setTimeout(function() {
+              window.location.href = url; // Redirigir a la URL proporcionada
+          }, 2000); // 2 segundos
+      }
+
+      // Asociar la función a los botones "Siguiente" y "Regresar"
+      document.getElementById("carga5").addEventListener("submit", function(event) {
+          cargarPagina(event, "pagina3.html"); // Aquí se redirige a "pagina3.html"
+      });
+
+      document.getElementById("carga6").addEventListener("submit", function(event) {
+          cargarPagina(event, "pagina2.html"); // Aquí se redirige a "pagina2.html"
+      });
   </script>
 </body>
 </html>
