--- a/pagina3.html
+++ b/pagina3.html
@@ -90,7 +90,7 @@
 
       <!-- Botones "Siguiente" y "Regresar" -->
       <form id="carga5" action="#">
-          <input class="botons" type="submit" value="Siguiente">
+          <input class="botons" type="submit" value="Generar CURP">
       </form>
       <form id="carga6" action="pagina2.html">
           <input class="botons" type="submit" value="Regresar">
