--- a/pagina3.html
+++ b/pagina3.html
@@ -32,8 +32,10 @@
   </style>
 </head>
 <body>
-  <!-- Franjas fuera del formulario -->
-  <div class="franja"></div>
+   <div class="franja">
+    <img src="uady.png" alt="Logo 1" class="logo">
+    <img src="gobierno.png" alt="Logo 2" class="logo">
+  </div>
   <div class="franja2"></div>
 
   <section class="form-register">
