--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           <label for="nombres">CURP:</label>
           <input class="controls" type="text" name="nombres" id="nombres" placeholder="Ingresa tu CURP">
       </div>
-      <form id="miFormulario">
+      <form id="miFormulario" action="pagina1.html">
         <input class="botons" type="submit" value="Ingresar">
     </form>
       <div class="link">¿No conoce su CURP?</div>
