--- a/pagina2.html
+++ b/pagina2.html
@@ -32,12 +32,9 @@
   </style>
 </head>
 <body>
- <div class="franja">
-    <img src="uady.png" alt="Logo 1" class="logo">
-    <img src="gobierno.png" alt="Logo 2" class="logo">
-  </div>
+  <!-- Franjas fuera del formulario -->
+  <div class="franja"></div>
   <div class="franja2"></div>
-
 
   <section class="form-register">
       <h4>Genera tu CURP</h4>
