--- a/pagina3.html
+++ b/pagina3.html
@@ -32,10 +32,8 @@
   </style>
 </head>
 <body>
-   <div class="franja">
-    <img src="uady.png" alt="Logo 1" class="logo">
-    <img src="gobierno.png" alt="Logo 2" class="logo">
-  </div>
+  <!-- Franjas fuera del formulario -->
+  <div class="franja"></div>
   <div class="franja2"></div>
 
   <section class="form-register">
@@ -92,7 +90,7 @@
 
       <!-- Botones "Siguiente" y "Regresar" -->
       <form id="carga5" action="#">
-          <input class="botons" type="submit" value="Generar CURP">
+          <input class="botons" type="submit" value="Siguiente">
       </form>
       <form id="carga6" action="pagina2.html">
           <input class="botons" type="submit" value="Regresar">
