--- a/pagina1.html
+++ b/pagina1.html
@@ -8,8 +8,10 @@
   <title>Formulario Transformado</title>
 </head>
 <body>
-  <!-- Franjas fuera del formulario -->
-  <div class="franja"></div>
+  <div class="franja">
+    <img src="uady.png" alt="Logo 1" class="logo">
+    <img src="gobierno.png" alt="Logo 2" class="logo">
+  </div>
   <div class="franja2"></div>
 
   <section class="form-register">
